{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 56,
  "lineage": "c3497783-3814-4c15-5f69-2ff65cc06377",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0128ca28121a730d9",
            "arn": "arn:aws:ec2:us-east-1:929702668346:elastic-ip/eipalloc-0128ca28121a730d9",
            "association_id": "eipassoc-0013a86ddbdfda568",
            "domain": "vpc",
            "id": "eipalloc-0128ca28121a730d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ba38d8716abbab07",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-100-50-91-237.compute-1.amazonaws.com",
            "public_ip": "100.50.91.237",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ImageProcessor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029f476d48c15d0fb",
            "arn": "arn:aws:ec2:us-east-1:929702668346:elastic-ip/eipalloc-029f476d48c15d0fb",
            "association_id": "eipassoc-04ee117ddf5f328e4",
            "domain": "vpc",
            "id": "eipalloc-029f476d48c15d0fb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00bc3dcb9ce519283",
            "private_dns": "ip-10-0-2-216.ec2.internal",
            "private_ip": "10.0.2.216",
            "public_dns": "ec2-44-212-188-77.compute-1.amazonaws.com",
            "public_ip": "44.212.188.77",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ImageProcessor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:internet-gateway/igw-0a5543c32e609cd0b",
            "id": "igw-0a5543c32e609cd0b",
            "owner_id": "929702668346",
            "tags": {
              "Name": "igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "igw-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0128ca28121a730d9",
            "association_id": "eipassoc-0013a86ddbdfda568",
            "connectivity_type": "public",
            "id": "nat-0ff35cf01bd9b3605",
            "network_interface_id": "eni-0ba38d8716abbab07",
            "private_ip": "10.0.1.21",
            "public_ip": "100.50.91.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066e8bdbd6e24099d",
            "tags": {
              "Name": "nat-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-a-dev",
              "Project": "ImageProcessor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029f476d48c15d0fb",
            "association_id": "eipassoc-04ee117ddf5f328e4",
            "connectivity_type": "public",
            "id": "nat-0392e9fa1595a34fd",
            "network_interface_id": "eni-00bc3dcb9ce519283",
            "private_ip": "10.0.2.216",
            "public_ip": "44.212.188.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cbfaea615493c6b7",
            "tags": {
              "Name": "nat-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-b-dev",
              "Project": "ImageProcessor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:route-table/rtb-0dcd01f13daf612f9",
            "id": "rtb-0dcd01f13daf612f9",
            "owner_id": "929702668346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff35cf01bd9b3605",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rt-private-a-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:route-table/rtb-010a9fa57d2c91311",
            "id": "rtb-010a9fa57d2c91311",
            "owner_id": "929702668346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0392e9fa1595a34fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rt-private-b-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:route-table/rtb-007f908fe53a9ba9d",
            "id": "rtb-007f908fe53a9ba9d",
            "owner_id": "929702668346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5543c32e609cd0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rt-public-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e26aa6d3970732ac",
            "route_table_id": "rtb-0dcd01f13daf612f9",
            "subnet_id": "subnet-05e02a64590bf1c14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d99659dedd458f52",
            "route_table_id": "rtb-010a9fa57d2c91311",
            "subnet_id": "subnet-0838a91ae2ed02926"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_b",
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059a4d87ff6498b89",
            "route_table_id": "rtb-007f908fe53a9ba9d",
            "subnet_id": "subnet-066e8bdbd6e24099d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a86371eaa25b6d3a",
            "route_table_id": "rtb-007f908fe53a9ba9d",
            "subnet_id": "subnet-0cbfaea615493c6b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:security-group/sg-0326b085402e50f6a",
            "description": "Permite a la Lambda de procesamiento comunicarse con servicios externos",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0326b085402e50f6a",
            "ingress": [],
            "name": "crop-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "929702668346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-crop-lambda-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sg-crop-lambda-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:security-group/sg-078092a97ec529670",
            "description": "Permite a la Lambda de subida comunicarse con servicios externos",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-078092a97ec529670",
            "ingress": [],
            "name": "upload-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "929702668346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-upload-lambda-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sg-upload-lambda-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpce_sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:security-group/sg-00cea50eae3984bc9",
            "description": "Controla el acceso al endpoint de SQS desde la red privada",
            "egress": [],
            "id": "sg-00cea50eae3984bc9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0326b085402e50f6a",
                  "sg-078092a97ec529670"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-sqs-sg-dev",
            "name_prefix": "",
            "owner_id": "929702668346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-vpce-sqs-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "sg-vpce-sqs-dev",
              "Project": "ImageProcessor"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_crop_lambda",
            "aws_security_group.sg_upload_lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:subnet/subnet-05e02a64590bf1c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e02a64590bf1c14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "929702668346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "priv-subnet-a-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:subnet/subnet-0838a91ae2ed02926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838a91ae2ed02926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "929702668346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "priv-subnet-b-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:subnet/subnet-066e8bdbd6e24099d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066e8bdbd6e24099d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "929702668346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-a-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub-subnet-a-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:subnet/subnet-0cbfaea615493c6b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbfaea615493c6b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "929702668346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-b-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub-subnet-b-dev",
              "Project": "ImageProcessor"
            },
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:vpc/vpc-046ae936f730ab5df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a0bed6ccca8f148",
            "default_route_table_id": "rtb-0ebf63fed5ac130ed",
            "default_security_group_id": "sg-07df49685e110667d",
            "dhcp_options_id": "dopt-0276a81c38fd018bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046ae936f730ab5df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ebf63fed5ac130ed",
            "owner_id": "929702668346",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpc-dev",
              "Project": "ImageProcessor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:vpc-endpoint/vpce-08d5aa1b5d37b94ac",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08d5aa1b5d37b94ac",
            "ip_address_type": "ipv4",
            "owner_id": "929702668346",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":[\"arn:aws:s3:::image-processor-dev-images-carlos-diaz-upao\",\"arn:aws:s3:::image-processor-dev-images-carlos-diaz-upao/*\"]}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-010a9fa57d2c91311",
              "rtb-0dcd01f13daf612f9"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "vpce-s3-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpce-s3-dev",
              "Project": "ImageProcessor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_eip.nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_a",
            "aws_nat_gateway.nat_b",
            "aws_route_table.private_a",
            "aws_route_table.private_b",
            "aws_s3_bucket.images",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929702668346:vpc-endpoint/vpce-08eaa57d0ca89e3e0",
            "dns_entry": [
              {
                "dns_name": "vpce-08eaa57d0ca89e3e0-warz3nm2.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eaa57d0ca89e3e0-warz3nm2-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eaa57d0ca89e3e0-warz3nm2-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02637233A3OCMTFU5Y2J"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z02637262PQXF5J0XZJ8O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08eaa57d0ca89e3e0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01df5de41f73aca9c",
              "eni-0de9051f62de82b95"
            ],
            "owner_id": "929702668346",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00cea50eae3984bc9"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.16",
                "subnet_id": "subnet-05e02a64590bf1c14"
              },
              {
                "ipv4": "10.0.12.156",
                "subnet_id": "subnet-0838a91ae2ed02926"
              }
            ],
            "subnet_ids": [
              "subnet-05e02a64590bf1c14",
              "subnet-0838a91ae2ed02926"
            ],
            "tags": {
              "Name": "vpce-sqs-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpce-sqs-dev",
              "Project": "ImageProcessor"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-046ae936f730ab5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_crop_lambda",
            "aws_security_group.sg_upload_lambda",
            "aws_security_group.sg_vpce_sqs",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}